NXP-32774: Align on 2025